[GTK] Test /webkit2/WebKitPrintOperation/print-errors gives runtime critical warnings https://bugs.webkit.org/show_bug.cgi?id=98497

Reviewed by Martin Robinson.

The problem is that GTK+ tries to write in the IO channel that has
already been closed.

* WebProcess/WebPage/gtk/WebPrintOperationGtk.cpp:
(WebKit::WebPrintOperationGtk::print): Finish the surface when
printing fails because printing data is invalid.

Canonical link: https://commits.webkit.org/116501@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@130509 268f45cc-cd09-0410-ab3c-d52691b4dbfc