Source/WebKit2/WebProcess/WebPage/gtk/WebPrintOperationGtk.cpp
@@ -697,6 +697,7 @@ void WebPrintOperationGtk::print(cairo_surface_t* surface, double xDPI, double y
 
     OwnPtr<PrintPagesData> data = adoptPtr(new PrintPagesData(this));
     if (!data->isValid) {
+        cairo_surface_finish(surface);
         printDone(invalidPageRangeToPrint(m_printContext));
         return;
     }
